--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "backend",
+  "name": "latinotype-scanner-backend",
   "version": "1.0.0",
   "type": "module",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "@sparticuz/chromium": "^127.0.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "puppeteer-core": "^22.6.5"
   }
 }
