--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@sparticuz/chromium": "^127.0.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.2",
-    "puppeteer-core": "^22.6.5"
+    "puppeteer": "^23.11.1"
   }
 }
