--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^138.0.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "puppeteer": "^23.11.1"
+    "puppeteer-core": "^24.19.0"
   }
 }
